# endstone-level-death

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/endstone_level_death/: __init__.py  config.toml  level_death.py
